<resources>
    <string name="app_name">StarVars</string>
    <string name="load_more">Load More</string>
    <string name="no_internet_connection">Нет соединения с интернетом</string>
    <string name="search_character">Search character</string>
    <string name="refresh">refresh</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="hair_color">Hair color</string>
    <string name="skin_color">Skin color</string>
    <string name="eye_color">Eye color</string>
    <string name="birth_year">Birth year</string>
    <string name="gender">Gender</string>
    <string name="home_world">Home world</string>
    <string name="films">Films</string>
</resources>